--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,21 @@
 <li>
 	<p>
-		{{id}}. {{burger_name}}
+		Byurgers for {{diner.diner_name}}
 	</p>
 
-	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		Devour it!
-	</button>
+	<ul>
+		{{#each burgers}}
+			{{#unless devoured}}
+			<li>
+				<div class="burger-li">
+					{{id}}. {{burger_name}}
+				</div>
+				<button class="devour" data-id="{{id}}" data-diner-id="{{DinerId}}" data-newdevoured="true" value="{{full}}">
+					Devour it!
+				</button>
+			</li>
+			{{/unless}}
+		{{/each}}
+	</ul>
+
 </li>
