--- a/views/partials/eaten-block.handlebars
+++ b/views/partials/eaten-block.handlebars
@@ -1,6 +1,6 @@
 <li>
   <div class="li-div">
-      Eaten by {{diner.diner_name}} {{#if diner.full}} ( full! ) {{/if}}
+      Eaten by {{diner.diner_name}} {{#if diner.full}} ( <span class="full-warning">full!</span> ) {{/if}}
     <div class="exit-btn-div">
       <button class="exit" data-id="{{diner.id}}">I'm done</button>
     </div>
