--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -10,7 +10,7 @@
 				<div class="burger-li">
 					{{id}}. {{burger_name}}
 				</div>
-				<button class="devour" data-id="{{id}}" data-diner-id="{{DinerId}}" data-newdevoured="true" value="{{full}}">
+				<button class="devour-btn" data-id="{{id}}" data-diner-id="{{DinerId}}" data-newdevoured="true" value="{{full}}">
 					Devour it!
 				</button>
 			</li>
