--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,8 +53,8 @@
 
 </div>
 <div class="rules-text">
-  <p>Once you're full, you can't order any more. You can finish eating all you've ordered, but be careful, you might &nbsp;<span id="splode-red">explode!</span></p>
-  <p>But if instead you leave with burgers still in your queue, we'll donate them to charity.</p>
+  <p>Order all you want, but once you're full, you can't order any more. You can finish eating all you've ordered, but be careful, you might &nbsp;<span id="splode-red">explode!</span></p>
+  <p>If you leave with burgers still in your queue, we'll donate them to charity.</p>
 </div>
 
 
