--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -85,12 +85,17 @@ ul>li>ul {
 }
 
 .devour-btn {
-  margin-left: 10px;
+  /* margin-right: 10px; */
 }
 
 .burger-li {
   display: inline-block;
+  font-size: 14px;
   width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: text-bottom;
 }
 
 li {
